# polls-plus

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt  requirements_dev.txt
mysite/: settings.py  urls.py
polls/: models.py  views.py
polls/migrations/: 0001_initial.py
pollsplus/: manage.py  requirements.txt  requirements_dev.txt
pollsplus/accounts/: forms.py  urls.py  views.py
pollsplus/ads/: admin.py  forms.py  models.py  urls.py  views.py
pollsplus/ads/migrations/: 0001_initial.py  0001_squashed_0021_remove_adcomment_updated_at.py  0002_historicaladvertisement.py  0003_alter_advertisement_text_and_more.py  0004_alter_advertisement_text_and_more.py  0005_remove_advertisement_updated_at_and_more.py  0006_advertisement_updated_at_and_more.py  0007_rename_advertisement_ad_and_more.py  0008_alter_ad_created_at_alter_ad_owner_alter_ad_price_and_more.py  0009_adcomment_ad_comments.py  0010_remove_ad_comments.py  0011_alter_adcomment_ad_alter_adcomment_author.py  0012_alter_adcomment_author.py  0013_alter_adcomment_author.py  0014_alter_adcomment_author_adimage.py  0015_adimage_uploaded_at.py  0016_rename_owner_ad_author_and_more.py  0017_alter_adcomment_options.py  0018_alter_adcomment_text.py  0019_adcomment_updated_at.py  0020_alter_adcomment_updated_at.py  0021_remove_adcomment_updated_at.py  0022_alter_adimage_uploaded_at.py  0023_adcomment_image_delete_adimage.py  0024_remove_adcomment_image_ad_image_historicalad_image.py  0025_alter_ad_image_alter_historicalad_image.py  0026_alter_ad_image_alter_historicalad_image.py  0027_rename_image_ad_picture_and_more.py  0028_adfavorite_ad_favored_by.py  0029_alter_adfavorite_unique_together.py  0030_alter_adfavorite_ad_alter_adfavorite_user.py  0031_alter_ad_favored_by.py  0032_ad_tags.py  0033_alter_ad_tags.py
pollsplus/ads/templatetags/: app_tags.py
pollsplus/autos/: forms.py  models.py  tests.py  urls.py  views.py
pollsplus/autos/migrations/: 0001_initial.py  0002_alter_auto_nickname_alter_make_name.py  0002_historicalauto_historicalmake.py
pollsplus/cats/: forms.py  models.py  tests.py  urls.py  views.py
pollsplus/cats/migrations/: 0001_initial.py  0002_alter_breed_name_alter_cat_nickname.py  0002_historicalbreed_historicalcat.py
pollsplus/hello/: urls.py  views.py
pollsplus/home/: admin.py  models.py  urls.py  views.py
pollsplus/home/migrations/: 0001_initial.py  0001_squashed_0011_alter_project_options_alter_project_status.py  0002_alter_project_image.py  0003_alter_project_image.py  0004_alter_project_image.py  0005_alter_project_image.py  0006_alter_project_image.py  0007_alter_project_options.py  0008_alter_project_options_alter_project_status.py  (+3 more)
pollsplus/polls/: admin.py  models.py  urls.py  views.py
pollsplus/pollsplus/: asgi.py  settings.py  urls.py  views.py  wsgi.py
pollsplus/reloadinator/: apps.py  urls.py  views.py
pollsplus/scripts/: populate_polls.py
pollsplus/short_url/: admin.py  forms.py  models.py  urls.py  views.py
pollsplus/site/: dj4e.html
pollsplus/static/: schema.json
pollsplus/templates/: base.html
pollsplus/tests/: tes_utils.py
pollsplus/utils/: helpers.py  views.py
site/css/: blocks.css
(+85 files in other folders)
