[tool.poetry]
name = "pollsplus"
version = "0.1.0"
description = ""
authors = ["ece-mohammad <kuro.ece@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
django-werkzeug = "^1.0.0"
ipython = "^8.27.0"
django-ipython = "^0.1.1"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-xdist = "^3.6.1"
pytest-sugar = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pollsplus.settings"
python_files = ["test_*.py", "*_test.py"]
required_plugins = ["pytest-django"]
addopts = "-x -l --no-header --fail-on-template-vars"
filterwarnings = ["ignore::DeprecationWarning"]
